manifests/grpc-streaming.yaml
kind: Pod
apiVersion: v1
metadata:
  name: grpc-streaming-app
  labels:
    app: grpc-streaming
spec:
  containers:
    - name: grpc-streaming
      image: gcr.io/spectro-dev-public/guyni/grpc-streaming:latest
      imagePullPolicy: Always
      command: ["/server"]
      args: ["-useWebSocket=true"]

---

kind: Service
apiVersion: v1
metadata:
  name: grpc-streaming-service
spec:
  selector:
    app: grpc-streaming
  ports:
    - port: 50005
