manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-streaming-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /grpc-ws(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: grpc-streaming-service
              port:
                number: 50005
